--- a/admin/app/assets/stylesheets/spree/admin/components/_navigation.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_navigation.scss
@@ -50,27 +50,35 @@
     }
 
     .nav-link {
-      @extend .text-muted;
       font-weight: 500;
+      border: 1px solid transparent;
 
       &:hover {
-        color: theme-color('black') !important;
-        background-color: $gray-25;
+        color: theme-color('primary') !important;
+        background-color: theme-color('active');
       }
       &.active, &:focus, &:active {
-        background-color: $gray-25;
-        color: theme-color('black') !important;
+        background-color: $gray-50;
+        color: theme-color('primary') !important;
+        border: 1px solid $gray-100;
       }
     }
   }
 }
 
-#header-tabs {
+.nav-bare {
   .nav-item {
     @extend .mr-4;
 
     .nav-link {
       @extend .px-0;
+      color: $gray-600;
+
+      &.active {
+        background-color: transparent;
+        color: theme-color('primary') !important;
+        font-weight: 600;
+      }
     }
   }
 }
