--- a/admin/app/views/spree/admin/custom_domains/new.html.erb
+++ b/admin/app/views/spree/admin/custom_domains/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :page_title do %>
   <%= page_header_back_button collection_url %>
-  Setup a new custom domain for your store
+  <%= Spree.t(:new_custom_domain) %>
 <% end %>
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @object } %>
