--- a/admin/app/views/spree/admin/exports/new.html.erb
+++ b/admin/app/views/spree/admin/exports/new.html.erb
@@ -17,7 +17,7 @@
           <%= f.label :record_selection, for: :export_record_selection_filtered, class: 'custom-control-label' do %>
             <%= Spree.t(:filtered_records) %>
             <br />
-            <span class="text-muted font-weight-normal">
+            <span class="text-muted font-weight-normal mr-1">
               <%= Spree.t('admin.export_only_filtered_records') %>
             </span>
           <% end %>
@@ -27,7 +27,7 @@
           <%= f.label :record_selection, for: :export_record_selection_all, class: 'custom-control-label' do %>
             <%= Spree.t(:all) %>
             <br />
-            <span class="text-muted font-weight-normal">
+            <span class="text-muted font-weight-normal mr-1">
               <%= Spree.t('admin.export_all') %>
             </span>
           <% end %>
