--- a/admin/app/views/spree/admin/option_types/_form.html.erb
+++ b/admin/app/views/spree/admin/option_types/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="card mb-4">
     <div class="card-header">
-      <h5 class="mb-0"><%= Spree.t(:general_information) %></h5>
+      <h5 class="card-title"><%= Spree.t(:general_information) %></h5>
     </div>
     <div class="card-body" data-controller="slug-form">
       <div class="row mb-3">
@@ -50,7 +50,7 @@
 
   <div class="card mb-4">
     <div class="card-header d-flex justify-content-between align-items-center">
-      <h5 class="mb-0"><%= Spree.t(:option_values) %></h5>
+      <h5 class="card-title"><%= Spree.t(:option_values) %></h5>
     </div>
     <div class="card-body p-0">
       <div class="table-responsive">
