--- a/admin/app/views/spree/admin/orders/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/orders/_table_filter_dropdown.html.erb
@@ -1,7 +1,7 @@
 <% if controller_name == 'orders' %>
   <div class="dropdown h-100 mr-2">
     <button class="btn btn-light h-100 dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-      <span class="text-muted font-weight-normal">
+      <span class="text-muted font-weight-normal mr-1">
         <%= Spree.t(:show) %>
       </span>
       <%= order_filter_dropdown_value %>
