--- a/admin/app/views/spree/admin/products/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/products/_table_filter_dropdown.html.erb
@@ -1,6 +1,6 @@
 <div class="dropdown h-100 mr-2">
   <button class="btn btn-light h-100 dropdown-toggle" type="button" data-toggle="dropdown" data-display="static" data-flip="false" aria-expanded="false">
-    <span class="text-muted font-weight-normal">
+    <span class="text-muted font-weight-normal mr-1">
       <%= Spree.t(:show) %>
     </span>
     <% if product_filter_status_dropdown_value == Spree.t('admin.products.all_statuses') && product_filter_stock_dropdown_value == Spree.t('admin.products.any_stock') %>
