--- a/admin/app/views/spree/admin/promotions/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/promotions/_table_filter_dropdown.html.erb
@@ -1,6 +1,6 @@
 <div class="dropdown h-100 mr-2">
   <button class="btn btn-light h-100 dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-    <span class="text-muted font-weight-normal">
+    <span class="text-muted font-weight-normal mr-1">
       <%= Spree.t(:status) %>
     </span> 
     <%= promotion_filter_dropdown_value %>
