--- a/admin/app/views/spree/admin/shared/_head.html.erb
+++ b/admin/app/views/spree/admin/shared/_head.html.erb
@@ -18,9 +18,8 @@
   -
   <% if defined?(current_store) && current_store.present? %>
     <%= current_store.name.capitalize %>
-  <% else %>
-    Spree
   <% end %>
+  - Spree Commerce
 </title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
