--- a/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
@@ -1,5 +1,5 @@
 <li class="nav-item">
-  <% storefront_active = %w[themes posts pages storefront].include?(controller_name) %>
+  <% storefront_active = %w[themes posts post_categories pages storefront].include?(controller_name) %>
   <%= active_link_to_with_icon('building-store', Spree.t('admin.storefront'), spree.admin_themes_path, class: 'nav-link', active: storefront_active) %>
 
   <% if storefront_active %>
@@ -11,7 +11,7 @@
         <%= active_link_to Spree.t(:pages), spree.admin_pages_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
-        <%= active_link_to Spree.t(:posts), spree.admin_posts_path, class: 'nav-link' %>
+        <%= active_link_to Spree.t(:posts), spree.admin_posts_path, class: 'nav-link', active: %w[posts post_categories].include?(controller_name) %>
       </li>
       <li class="nav-item">
         <%= active_link_to Spree.t(:settings), spree.edit_admin_storefront_path, class: 'nav-link' %>
