--- a/admin/app/views/spree/admin/stock_items/_stock_item.html.erb
+++ b/admin/app/views/spree/admin/stock_items/_stock_item.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td scope="row" class="w-50">
+  <td scope="row p-0" class="w-50">
     <%= render 'spree/admin/variants/variant', variant: stock_item.variant %>
   </td>
   <td class="w-20">
