--- a/admin/app/views/spree/admin/stock_locations/_form.html.erb
+++ b/admin/app/views/spree/admin/stock_locations/_form.html.erb
@@ -23,7 +23,7 @@
           </div>
         </div>
         <% unless f.object.default? %>
-          <div class="row">
+          <div class="row mt-3">
             <div class="col-12">
               <div class="form-group">
                 <div class="custom-control custom-checkbox">
