--- a/admin/app/views/spree/admin/taxonomies/new.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/new.html.erb
@@ -12,7 +12,7 @@
           <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @taxonomy } %>
           <div class="form-group">
             <%= f.label :name, raw(Spree.t(:name) + required_span_tag) %>
-            <%= f.text_field :name, class: 'form-control' %>
+            <%= f.text_field :name, class: 'form-control', required: true, autofocus: true %>
             <%= f.error_message_on :name %>
           </div>
         </div>
