--- a/admin/app/assets/stylesheets/spree/admin/components/_cards.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_cards.scss
@@ -44,7 +44,7 @@
 .card-header {
   display: flex;
   align-items: center;
-  min-height: 53px;
+  height: 52px;
   border-bottom-color: $gray-50;
 
   .card-title {
@@ -74,4 +74,53 @@
 
 .card-body .form-group:last-child {
   margin-bottom: 0;
+}
+
+.card-header .arrow {
+  @extend .w-auto;
+  &:before {
+    transition: .3s transform ease-in-out;
+  }
+}
+.card-header .collapsed .arrow:before {
+  transform: rotate(-90deg);
+}
+
+.collapsable-card {
+  @extend .card;
+  @extend .overflow-hidden;
+
+  .card-header {
+    @extend .p-0;
+  }
+  .card-header a {
+    padding: 0.75rem !important;
+
+    .ti-chevron-down {
+      color: $gray-400;
+    }
+
+    &:hover {
+      text-decoration: none !important;
+
+      .ti-chevron-down {
+        color: $gray-900 !important;
+      }
+    }
+  }
+  &:hover {
+    .card-header a {
+      text-decoration: none !important;
+
+      .ti-chevron-down {
+        color: $gray-500;
+      }
+    }
+  }
+  .card-body {
+    border-top: 1px solid $gray-50;
+  }
+  .card-header {
+    border: 0 none;
+  }
 }
