--- a/admin/app/assets/stylesheets/spree/admin/components/_variants_form.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_variants_form.scss
@@ -167,6 +167,8 @@
       border-radius: $border-radius;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
+      border-bottom-left-radius: $border-radius-lg;
+      border-bottom-right-radius: $border-radius-lg;
     }
 
     &__body {
