--- a/admin/app/views/spree/admin/dashboard/show.html.erb
+++ b/admin/app/views/spree/admin/dashboard/show.html.erb
@@ -16,7 +16,8 @@
         <%= hidden_field_tag :vendor_id, @vendor.id if @vendor.present? %>
         <%= render 'spree/admin/shared/calendar_range_picker',
           date_from_value: params[:date_from] || 1.month.ago.beginning_of_month,
-          date_to_value: params[:date_to] || 1.month.ago.end_of_month %>
+          date_to_value: params[:date_to] || 1.month.ago.end_of_month,
+          css_classes: "btn btn-sm border hover-light d-inline-flex align-items-center h-100 dropdown-toggle" %>
       <% end %>
     </div>
     <%= render 'analytics' %>
