--- a/admin/app/views/spree/admin/pages/_form.html.erb
+++ b/admin/app/views/spree/admin/pages/_form.html.erb
@@ -10,7 +10,7 @@
       <div class="card-body">
         <div class="form-group">
           <%= f.label :name, Spree.t(:name) %>
-          <%= f.text_field :name, class: 'form-control', required: true, data: { slug_form_target: :name, action: 'slug-form#updateUrlFromName', seo_form_target: 'sourceTitleInput' } %>
+          <%= f.text_field :name, class: 'form-control', required: true, data: { slug_form_target: :name, action: 'slug-form#updateUrlFromName', seo_form_target: 'sourceTitleInput' }, autofocus: true %>
         </div>
       </div>
     </div>
