--- a/admin/app/views/spree/admin/products/form/_base.html.erb
+++ b/admin/app/views/spree/admin/products/form/_base.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="form-group">
       <%= f.label :name, Spree.t(:name) %>
-      <%= f.text_field :name, class: 'form-control', required: true, data: { seo_form_target: 'sourceTitleInput', slug_form_target: :name, action: 'slug-form#updateUrlFromName' } %>
+      <%= f.text_field :name, class: 'form-control', required: true, autofocus: f.object.new_record?, data: { seo_form_target: 'sourceTitleInput', slug_form_target: :name, action: 'slug-form#updateUrlFromName' } %>
       <%= f.error_message_on :name %>
     </div>
 
