--- a/admin/app/views/spree/admin/products/index.html.erb
+++ b/admin/app/views/spree/admin/products/index.html.erb
@@ -11,3 +11,8 @@
     <%= render 'list' %>
   <% end %>
 </div>
+
+<p class="text-muted small text-center py-2 px-3 mt-3 rounded-pill mx-auto d-flex-inline">
+  Learn more about 
+  <%= external_link_to 'managing products', 'https://spreecommerce.org/docs/user/manage-products', class: 'text-decoration-none' %>
+</p>
