--- a/admin/app/views/spree/admin/properties/_form.html.erb
+++ b/admin/app/views/spree/admin/properties/_form.html.erb
@@ -1,12 +1,12 @@
 <div data-controller="slug-form">
   <div class="form-group">
     <%= f.label :presentation, raw(Spree.t(:presentation) + required_span_tag) %>
-    <%= f.text_field :presentation, class: 'form-control', data: { slug_form_target: :name, action: 'input->slug-form#updateUrlFromName' } %>
+    <%= f.text_field :presentation, class: 'form-control', data: { slug_form_target: :name, action: 'input->slug-form#updateUrlFromName' }, required: true, autofocus: f.object.new_record? %>
     <%= f.error_message_on :presentation %>
   </div>
   <div class="form-group">
     <%= f.label :name, Spree.t(:internal_name) %>
-    <%= f.text_field :name, class: 'form-control', data: { slug_form_target: :url } %>
+    <%= f.text_field :name, class: 'form-control', data: { slug_form_target: :url }, required: true %>
     <%= f.error_message_on :name %>
   </div>
   <div class="form-group">
