--- a/admin/app/views/spree/admin/properties/_property.html.erb
+++ b/admin/app/views/spree/admin/properties/_property.html.erb
@@ -9,7 +9,7 @@
     <%= link_to property.presentation, spree.edit_admin_property_path(property), class: 'text-decoration-none d-flex align-items-center font-weight-bold text-dark', data: { row_link_target: :link } %>
   </td>
   <td class="w-20 cursor-pointer" data-action="click->row-link#openLink">
-    <%= property.kind.humanize %>
+    <span class="badge badge-light"><%= property.kind.humanize %></span>
   </td>
   <td class="w-10 cursor-pointer" data-action="click->row-link#openLink">
     <%= property.products.count %>
