--- a/admin/app/views/spree/admin/reports/new.html.erb
+++ b/admin/app/views/spree/admin/reports/new.html.erb
@@ -3,13 +3,13 @@
   <%= Spree.t("report_names.#{params[:type]}") %>
 <% end %>
 
-  <%= content_for :page_actions do %>
+<%= content_for :page_actions do %>
   <%= form_for @report, url: spree.admin_reports_path, as: :report, html: { class: 'd-inline-block' } do |f| %>
     <%= f.hidden_field :type %>
     <%= f.hidden_field :date_from %>
     <%= f.hidden_field :date_to %>
     <%= f.hidden_field :currency %>
-    <button class="btn btn-light with-tip" title="Download report as CSV file">
+    <button class="btn btn-primary with-tip" title="Download report as CSV file">
       <%= icon('download') %>
       <%= Spree.t(:download) %>
     </button>
@@ -24,12 +24,12 @@
       <%= render 'spree/admin/shared/calendar_range_picker',
         date_from_value: @report.date_from,
         date_to_value: @report.date_to,
-        css_classes: 'custom-select d-flex cursor-default' %>
+        css_classes: 'custom-select d-flex cursor-default bg-transparent' %>
 
       <div class="form-group">
         <%= select_tag :currency,
           options_for_select(current_store.supported_currencies_list, @report.currency),
-          class: 'custom-select',
+          class: 'custom-select bg-transparent',
           data: { action: 'change->auto-submit#submit' } %>
       </div>
     </div>
