--- a/admin/app/views/spree/admin/return_authorizations/_filters.html.erb
+++ b/admin/app/views/spree/admin/return_authorizations/_filters.html.erb
@@ -9,7 +9,7 @@
         data-toggle="dropdown"
         aria-expanded="false"
       >
-        <span class="text-muted font-weight-normal">
+        <span class="text-muted font-weight-normal mr-1">
           <%= Spree.t(:show) %>:
         </span>
         <% if params.dig(:q, :state_eq).present? %>
