--- a/admin/app/views/spree/admin/variants/_variant.html.erb
+++ b/admin/app/views/spree/admin/variants/_variant.html.erb
@@ -1,15 +1,13 @@
-<div class="d-flex align-items-center justify-content-start">
-  <%= link_to spree.edit_admin_product_path(variant.product), data: { turbo_frame: :_top } do %>
+<% cache variant do %>
+  <%= link_to spree.edit_admin_product_variant_path(variant.product, variant), data: { turbo_frame: :_top }, class: 'd-flex align-items-center justify-content-start text-decoration-none' do %>
     <%= render 'spree/admin/shared/product_image', object: variant %>
+    <div class="ml-3">
+      <strong><%= variant.name %></strong>
+      <% if variant.options_text.present? %>
+        <p class="text-muted my-1 font-size-sm">
+          <%= variant.options_text %>
+        </p>
+      <% end %>
+    </div>
   <% end %>
-  <div class="ml-3">
-    <%= link_to variant.product.name, spree.edit_admin_product_path(variant.product), data: { turbo_frame: :_top } , class: 'text-dark' %>
-    <br>
-    <span class="text-muted">
-      <%= "(#{variant.options_text})" if variant.options_text.present? %>
-    </span>
-    <% if variant.sku.present? %>
-      <span class="text-muted"><strong><%= Spree.t(:sku) %>:</strong> <%= variant.sku %></span>
-    <% end %>
-  </div>
-</div>
+<% end %>
