--- a/admin/app/views/spree/admin/variants/form/_basic.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_basic.html.erb
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-header">
-    <h5 class="mb-0">
+    <h5 class="card-title">
       <%= Spree.t(:settings) %>
     </h5>
   </div>
