--- a/admin/app/views/spree/admin/variants/form/_media.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_media.html.erb
@@ -13,16 +13,19 @@
           data-sortable-resource-name-value="asset"
           data-sortable-response-kind-value="json">
       <%= render partial: 'spree/admin/variants/form/media_asset', collection: media_form_assets(viewable), as: :asset, cached: spree_base_cache_scope %>
-      <%= button_tag class: 'text-muted border border-dashed bg-gray-25 hover-gray-50 rounded-lg media-form__add-button h-100', data: {
+      <%= button_tag class: "text-muted border border-dashed bg-gray-25 hover-gray-50 rounded-lg media-form__add-button #{'h-100' if media_form_assets(viewable).any?}", data: {
           controller: 'asset-uploader',
           asset_uploader_multiple_value: true,
           asset_uploader_viewable_id_value: viewable&.id,
           asset_uploader_viewable_type_value: 'Spree::Variant',
-          asset_uploader_allowed_file_types_value: Rails.application.config.active_storage.web_image_content_types,
+          asset_uploader_allowed_file_types_value: allowed_file_types_for_upload,
           action: 'asset-uploader#open',
           media_form_target: 'addButton'
         }  do %>
-        <%= icon('upload', class: 'my-5', style: 'font-size: 2rem;') %>
+        <%= icon('upload', class: 'mt-5', style: 'font-size: 2rem;') %>
+        <p class="text-muted form-text mt-2 mb-5">
+          <%= Spree.t('admin.upload_new_asset') %>
+        </p>
       <% end %>
     </div>
   </div>
