Don't try to load maps if mapkick is not configured

--- a/admin/app/views/spree/admin/shared/_map.html.erb
+++ b/admin/app/views/spree/admin/shared/_map.html.erb
@@ -1,4 +1,4 @@
-<% if map_object.latitude.present? && map_object.longitude.present? %>
+<% if Mapkick.options[:access_token] && map_object.latitude.present? && map_object.longitude.present? %>
   <div class="rounded overflow-hidden">
     <%= js_map [{
       latitude: map_object.latitude,
