Remove product images using turbo stream

--- a/admin/app/assets/stylesheets/spree/admin/components/_media_form.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_media_form.scss
@@ -19,6 +19,10 @@
       grid-row: 1 / span 1;
       aspect-ratio: 12/1;
     }
+
+    &:not(:only-child) {
+      height: 100% !important;
+    }
   }
 
   &__image {
