--- a/admin/app/views/spree/admin/stores/form/_checkout.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_checkout.html.erb
@@ -1,27 +1,49 @@
 <%= content_for(:page_title) do %>
-  Checkout settings
+  <%= Spree.t(:checkout_settings) %>
 <% end %>
 
 <%= content_for :page_alerts do %>
   <div class="alert alert-info mb-3">
     <p>
-      Checkout footer links are added automatically based on the <%= link_to 'Policies', spree.edit_admin_store_path + '?section=policies', class: 'alert-link' %> content.
+      <%= Spree.t('admin.checkout_settings.policy_copy', policies_link: link_to(Spree.t(:policies), spree.edit_admin_store_path + '?section=policies', class: 'alert-link')).html_safe %>
     </p>
   </div>
 <% end %>
 
-<div class="card-lg">
-  <h5 class="mb-3"><%= Spree.t(:checkout_message) %></h5>
+<div class="row">
+  <div class="col-lg-7">
+    <div class="card mb-4">
+      <div class="card-header">
+        <h5 class="card-title"><%= Spree.t(:checkout_message) %></h5>
+      </div>
 
-  <div class="row">
-    <div class="col-lg-4">
-      <p class="text-muted">
-        Visible to your customers on the checkout page in the right sidebar.
-      </p>
+      <div class="card-body">
+        <p class="text-muted">
+          <%= Spree.t('admin.checkout_settings.checkout_message_description') %>
+        </p>
+        <div class="trix-container">
+          <%= f.rich_text_area :checkout_message, class: 'overflow-auto', style: 'height: 300px' %>
+        </div>
+      </div>
     </div>
-    <div class="col-lg-7 offset-lg-1">
-      <div class="trix-container">
-        <%= f.rich_text_area :checkout_message, class: 'overflow-auto', style: 'height: 300px' %>
+  </div>
+
+  <div class="col-lg-5">
+    <div class="card mb-4">
+      <div class="card-header">
+        <h5 class="card-title"><%= Spree.t(:guest_checkout) %></h5>
+      </div>
+
+      <div class="card-body">
+        <p class="text-muted">
+          <%= Spree.t('admin.checkout_settings.guest_checkout.description') %>
+        </p>
+
+        <div class="custom-control custom-checkbox mb-3">
+          <%= f.check_box :preferred_guest_checkout, class: "custom-control-input" %>
+          <%= f.label :preferred_guest_checkout, Spree.t('admin.checkout_settings.guest_checkout.label'), class: "custom-control-label" %>
+          <%= f.error_message_on :preferred_guest_checkout %>
+        </div>
       </div>
     </div>
   </div>
